tests/snapshots/cli_help__cli_help_logs.snap
---
source: tests/cli_help.rs
expression: normalize_help_output(&stdout)
---
Show spotuify log file location or recent log lines

Usage: spotuify logs <COMMAND>

Commands:
  path  Print the log path
  tail  Print recent log lines
  help  Print this message or the help of the given subcommand(s)

Options:
  -h, --help  Print help
