tests/snapshots/cli_help__cli_help_logs_path.snap
---
source: tests/cli_help.rs
expression: normalize_help_output(&stdout)
---
Print the log path

Usage: spotuify logs path

Options:
  -h, --help  Print help
