tests/snapshots/cli_help__cli_help_logs_tail.snap
---
source: tests/cli_help.rs
expression: normalize_help_output(&stdout)
---
Print recent log lines

Usage: spotuify logs tail [LINES]

Arguments:
  [LINES]  Number of lines to print [default: 80]

Options:
  -h, --help  Print help
