tests/snapshots/cli_help__cli_help_lyrics_follow.snap
---
source: tests/cli_help.rs
expression: normalize_help_output(&stdout)
---
Follow synced lyrics for the current track

Usage: spotuify lyrics follow [OPTIONS]

Options:
      --lines <LINES>            Number of lyric lines to show in human mode [default: 3]
      --log-format <LOG_FORMAT>  Phase 13 (P13-A) — pick the daemon log format for this run. Also honoured via `SPOTUIFY_LOG_FORMAT` [possible values: text, json]
      --lead <LEAD>              Display timing adjustment, e.g. +250ms or -100ms
      --no-daemon-start          Phase 13 (P13-H) — if set, the CLI never auto-starts the daemon. Errors with a clear hint when the daemon socket is missing
      --format <FORMAT>          Output format. Supports table and jsonl [default: table] [possible values: table, jsonl]
  -o, --set <key.path=value>     Phase 13 (P13-H) — one-shot TOML override (e.g. `-o player.bitrate=160`). Repeatable. Applies for this invocation only; the config file on disk is unchanged
  -h, --help                     Print help
