tests/snapshots/cli_help__cli_help_next.snap
---
source: tests/cli_help.rs
expression: normalize_help_output(&stdout)
---
Skip to the next track

Usage: spotuify next [OPTIONS]

Options:
      --format <FORMAT>  Output format for the mutation receipt [default: table] [possible values: table, json, jsonl, csv, ids]
  -h, --help             Print help
